testing bg-image not showing on safari bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,8 +36,9 @@ a {
 //component
 nav {
   @include centerify();
-  position: sticky;
+  position: fixed;
   top: 0;
+  z-index: 1;
   height: 5rem;
   width: 100%;
   justify-content: space-between;
@@ -45,7 +46,7 @@ nav {
 
   .nav-left {
     display: flex;
-    width: 31vw;
+    width: 36vw;
     justify-content: space-between;
     align-items: center;
     button {
@@ -100,8 +101,9 @@ nav {
   }
 
   .background {
-    background: url("https://images.unsplash.com/photo-1477346611705-65d1883cee1e?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170") center center fixed no-repeat ;
+    background: url("https://images.unsplash.com/photo-1477346611705-65d1883cee1e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80") center center fixed no-repeat ;
     min-height: 500px;
+
   }
 
   .front {
@@ -198,6 +200,7 @@ nav {
     max-height: 30vh;
     width: 29vw;
     opacity: 76%;
+    overflow: hidden;
     transition: opacity 0.7s ease-in-out;
     transform: translateX(44px);
     &:hover {
@@ -280,7 +283,7 @@ nav {
 =============================================================
 */
 
-@media only screen and(max-width: 600px) {
+@media only screen and(max-width: 900px) {
   body,
   html {
     min-width: 100vw;
@@ -345,6 +348,7 @@ nav {
   .container {
     .front {
       .hi-container {
+        margin-top: 5rem;
         .auto-typed,
         .declare {
           width: 90vw;
@@ -363,7 +367,9 @@ nav {
       }
     }
     .background {
+      background: url('./img/background.jpg') center center fixed no-repeat ;
       background-size: 100vw 100vh;
+
     }
   }
 
